--- a/estilos/style.css
+++ b/estilos/style.css
@@ -17,7 +17,7 @@ body{
     background: url('../pacote-d013/imagens/fundo-madeira.jpg') no-repeat top center;
     background-size: cover;
     background-attachment: fixed;
-}
+   }
 main{
     height: 100vh;
     position: relative;
@@ -31,7 +31,16 @@ section#telefone{
     transform: translate(-50%,-50%);
     background: url('../pacote-d013/imagens/frame-iphone.png')no-repeat;
     
+
+    
     height: 627px;
     width: 311px;
 
+}
+iframe#tela{
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
 }
