--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,12 +30,9 @@ section#telefone{
     left: 50%;
     transform: translate(-50%,-50%);
     background: url('../pacote-d013/imagens/frame-iphone.png')no-repeat;
-    
-
-    
+       
     height: 627px;
     width: 311px;
-
 }
 iframe#tela{
     position: relative;
@@ -43,4 +40,23 @@ iframe#tela{
     left: 22px;
     width: 269px;
     height: 471px;
+}
+
+section#redes-sociais{
+    text-align: right;
+}
+section#redes-sociais img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.378);
+    box-sizing: border-box;
+
+}
+
+section#redes-sociais img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.604);
+    transform: translate(-3px, 3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.601);
+    transition: transform 0.5s;
 }
